<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/bottom_nav_margin">

        <TextView
            android:id="@+id/textView_nurse_timer"
            style="@style/TimerText"
            android:text="@string/zeroed_MS_timer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/left_indicator"
            style="@style/Indicator"
            app:layout_constraintTop_toTopOf="@id/button_nurse_left_timer"
            app:layout_constraintEnd_toEndOf="@id/button_nurse_left_timer"/>

        <Button
            android:id="@+id/button_nurse_left_timer"
            style="@style/DualTimerButton"
            android:text="@string/left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/right_indicator"
            style="@style/Indicator"
            app:layout_constraintTop_toTopOf="@id/button_nurse_right_timer"
            app:layout_constraintStart_toStartOf="@id/button_nurse_right_timer"/>

        <Button
            android:id="@+id/button_nurse_right_timer"
            style="@style/DualTimerButton"
            android:text="@string/right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/textView_manual_nurse_entry"
            style="@style/ManualTextButton"
            app:layout_constraintTop_toBottomOf="@id/button_nurse_left_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/button_save_nurse"
            style="@style/SaveButton"
            app:layout_constraintTop_toBottomOf="@id/button_nurse_left_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>