<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_date"
                style="@style/DateText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textView_startTime_label"
                style="@style/InputFieldLabel"
                android:text="@string/hint_start_time"
                app:layout_constraintTop_toBottomOf="@id/textView_date"
                app:layout_constraintStart_toStartOf="parent"/>

            <TimePicker
                android:id="@+id/timePicker_startTime"
                style="@style/TimePicker"
                app:layout_constraintTop_toBottomOf="@id/textView_startTime_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textView_endTime_label"
                style="@style/InputFieldLabel"
                android:text="@string/hint_end_time"
                app:layout_constraintTop_toBottomOf="@id/timePicker_startTime"
                app:layout_constraintStart_toStartOf="parent"/>

            <TimePicker
                android:id="@+id/timePicker_endTime"
                style="@style/TimePicker"
                app:layout_constraintTop_toBottomOf="@id/textView_endTime_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textView_starting_amount_label"
                style="@style/InputFieldLabel"
                android:text="@string/inputLabel_starting_amount"
                app:layout_constraintTop_toBottomOf="@id/timePicker_endTime"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/editText_starting_amount"
                style="@style/InputFields.Ounces"
                app:layout_constraintTop_toBottomOf="@id/textView_starting_amount_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <SeekBar
                android:id="@+id/seekBar_starting_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="0"
                android:max="120"
                app:layout_constraintTop_toBottomOf="@id/editText_starting_amount"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textView_ending_amount_label"
                style="@style/InputFieldLabel"
                android:text="@string/inputLabel_ending_amount"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/seekBar_starting_amount"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/editText_ending_amount"
                style="@style/InputFields.Ounces"
                app:layout_constraintTop_toBottomOf="@id/textView_ending_amount_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <SeekBar
                android:id="@+id/seekbar_ending_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="0"
                android:max="120"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/editText_ending_amount"/>

            <cdflynn.android.library.checkview.CheckView
                android:id="@+id/check"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:checkView_strokeColor="@color/saveButtonColor"
                app:checkView_strokeWidth="5dp"
                app:layout_constraintTop_toBottomOf="@id/seekbar_ending_amount"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="40dp"/>

            <Button
                android:id="@+id/button_save"
                style="@style/SaveButton"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/seekbar_ending_amount"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="40dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>