<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/textView_current_symptom_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_health_details"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/textView_last_temp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_temp"
        app:layout_constraintTop_toBottomOf="@id/textView_current_symptom_details"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/textView_last_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textView_last_temp_label"
        app:layout_constraintStart_toEndOf="@id/textView_last_temp_label"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/textView_last_medication_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_medication"
        app:layout_constraintTop_toBottomOf="@id/textView_last_temp_label"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/textView_last_medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textView_last_medication_label"
        app:layout_constraintStart_toEndOf="@id/textView_last_medication_label"
        android:layout_marginStart="12dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_last_medication_label"
        android:layout_marginTop="20dp">

<!--        <ListView-->
<!--            android:id="@+id/listView_health"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"/>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="No Health Activites to Show Yet"
            android:gravity="center"/>

    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_symptom_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_symptom"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/fab_add_medication_activity"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_medication_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_medication"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/fab_add_temperature_activity"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_temperature_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_temperature"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/fab_add_health_activity"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_health_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>